tests/models/enum/unnamed/u32/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        u32
    ),
}
fn main() {}
